--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "private": true,
   "dependencies": {
     "@stardust-ui/docs-components": "^0.40.0",
+    "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "react": "^16.12.0",
+    "react-country-region-selector": "^1.4.7",
+    "react-date-picker-cs": "^0.1.28",
+    "react-datepicker": "^2.10.1",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
+    "react-input-calendar": "^0.5.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-semantic-ui-datepickers": "^2.2.0",
+    "react-stripe-elements": "^6.0.1",
+    "react-toastify": "^5.5.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-calendar-react": "^0.15.3",
+    "semantic-ui-react": "^0.88.1",
+    "toastify": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
