--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
     "react-input-calendar": "^0.5.4",
+    "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
